--- a/sass/_sakura-design.scss
+++ b/sass/_sakura-design.scss
@@ -90,3 +90,16 @@
         }
     }
 }
+
+.nav-pages {
+    &_button {
+        &:hover>span {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            background: url(../img/header/sakura.gif) center center / cover no-repeat;
+        }
+    }
+}
