--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,4 @@
-@import '_variables';
-@import '_main';
+@import 'variables';
 
 .container {
     max-width: 900px;
@@ -10,4 +9,11 @@
     font-family: 'Piazolla', 'Segoe UI', sans-serif;
 }
 
-@import '_sakura-design';
+@import 'main';
+@import 'header';
+@import 'footer';
+@import 'nav-pages';
+@import 'sakura-design';
+@import 'language-buttons';
+@import 'mini-vidget-links';
+@import 'media';
