--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,102 +1,3 @@
-.language-buttons {
-    top: 15px;
-    right: 10%;
-    position: fixed;
-    z-index: 1;
-    width: 80px;
-    // height: 60px;
-    background-color: $primary-color;
-    display: flex;
-    flex-direction: column;
-    // justify-content: space-between;
-    align-items: center;
-
-    button {
-        display: block;
-        color: $third-color;
-        text-decoration-line: none;
-        height: calc(100% / 2);
-        width: 100%;
-        text-align: center;
-        transition: 0.4s all;
-        padding: 5px 0;
-        border: 0;
-
-        &:hover:last-child {
-            background-color: $secondary-color;
-            color: $primary-color;
-        }
-    }
-
-    .button-active {
-        background-color: $secondary-color;
-        color: $primary-color;
-        pointer-events: none;
-    }
-}
-
-.header {
-    position: relative;
-    z-index: 1;
-
-    &_button-wrapper {
-        display: flex;
-        width: 100%;
-        column-gap: 15px;
-    }
-
-    .button_active {
-        color: $primary-color;
-        background-color: $secondary-color;
-        pointer-events: none;
-    }
-
-    &_button {
-        transition: 0.4s all;
-
-        &:hover {
-            color: $primary-color;
-            background-color: $secondary-color;
-        }
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 290px;
-        height: 80px;
-        background-color: $primary-color;
-        font-weight: 700;
-        font-size: 24px;
-        letter-spacing: 0.03em;
-        text-align: center;
-        color: $third-color;
-        text-decoration-line: none;
-        column-gap: 9px;
-        line-height: 26px;
-
-        &:first-child {
-            border-top-left-radius: $border-radius;
-        }
-
-        &:last-child {
-            border-bottom-right-radius: $border-radius;
-        }
-
-        span {
-            font-family: 'HeptaSlab';
-            line-height: 125%;
-            letter-spacing: 0.1em;
-            font-weight: 700;
-        }
-    }
-
-    &_logo {
-        display: block;
-        width: 78px;
-        height: 64px;
-    }
-}
-
 .main {
     position: relative;
     z-index: 1;
@@ -111,6 +12,10 @@
     .left-section {
         width: 595px;
         min-height: 880px;
+
+        .language-buttons {
+            display: none;
+        }
     }
 
     .right-section {
@@ -178,7 +83,8 @@
         &-block {
             margin-top: 15px;
             width: 100%;
-            height: 290px;
+            padding: 20px;
+            min-height: 290px;
             background-color: $primary-color;
             display: flex;
             justify-content: center;
@@ -217,22 +123,28 @@
             width: 245px;
             row-gap: 2vw;
 
-            h4,
-            p {
+
+            div {
                 display: flex;
                 align-items: center;
+                flex-wrap: wrap;
                 justify-content: center;
-                line-height: 40px;
                 width: 100%;
                 min-height: 3vw;
                 margin-bottom: 0;
                 background-color: $secondary-color;
                 text-align: center;
                 color: $primary-color;
+                padding: 10px;
 
-                span {
-                    display: block;
+                span,
+                p {
                     margin-right: 4px;
+                    font-size: 20px;
+                }
+
+                p {
+                    margin: 0;
                 }
             }
 
@@ -241,10 +153,6 @@
                 font-family: 'HeptaSlab';
                 line-height: 125%;
                 letter-spacing: 0.1em;
-            }
-
-            p {
-                font-size: 20px;
             }
         }
     }
@@ -289,98 +197,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-        }
-    }
-}
-
-.nav-pages {
-    position: relative;
-    z-index: 1;
-    margin-top: 15px;
-
-    &_wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        column-gap: 15px;
-        width: 100%;
-        height: 40px;
-        background-color: $primary-color;
-        border-bottom-right-radius: $border-radius;
-        border-bottom-left-radius: $border-radius;
-    }
-
-    &_button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: calc(30% / 3);
-        height: 80%;
-        background-color: $secondary-color;
-        text-decoration-line: none;
-
-        span {
-            color: $primary-color;
-            font-family: 'Piazolla', sans-serif;
-            font-size: 20px;
-            transition: 0.4s all;
-        }
-
-        &:hover {
-            background-color: $third-color;
-        }
-    }
-
-    &-active {
-        background-color: $third-color;
-        pointer-events: none;
-    }
-}
-
-.footer {
-    position: relative;
-    z-index: 1;
-
-
-    &-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 80px;
-        background-color: $primary-color;
-        margin-top: 15px;
-        border-top-left-radius: $border-radius;
-        border-top-right-radius: $border-radius;
-        column-gap: 15px;
-        transition: 0.4s all;
-
-        img {
-            pointer-events: none;
-        }
-
-        p {
-            margin-bottom: 0;
-            text-align: center;
-            font-size: 22px;
-            color: $third-color;
-            pointer-events: none;
-
-            span {
-                font-family: HeptaSlab;
-                line-height: 125%;
-                letter-spacing: .1em;
-                font-weight: 700;
-            }
-        }
-
-        &:hover {
-            background-color: $secondary-color;
-
-
-            p {
-                color: $primary-color;
-            }
         }
     }
 }
