--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -80,11 +80,52 @@
             flex-direction: column;
             column-gap: 0;
             row-gap: 15px;
+            padding-top: 30px;
         }
 
         &_button {
             margin: 0 auto;
-            width: 95%;
+            width: 80%;
+
+            &:hover {
+                background-color: $primary-color;
+                color: $third-color;
+            }
+
+            &:first-child {
+                width: 300px;
+                height: 120px;
+                font-size: 30px;
+                border-top-left-radius: 30px;
+                border-bottom-right-radius: 30px;
+                // flex-direction: column;
+                transform: skewX(-16deg);
+                background: $secondary-color url(../img/header/sakura.gif) center center / cover no-repeat;
+
+                img,
+                span {
+                    transform: skewX(16deg);
+                }
+
+                img {
+                    position: relative;
+                    width: 120px;
+                    height: 100px;
+                    // left: -8px;
+                }
+
+                span {
+                    // text-align: left;
+                }
+            }
+
+            &:nth-child(2) {
+                margin-top: 15px;
+            }
+
+            &:last-child {
+                border-radius: 0;
+            }
         }
     }
 
@@ -98,11 +139,18 @@
                 .language-buttons {
                     width: 95%;
                     font-size: 4vw;
+
+                    button:hover {
+                        background-color: $primary-color;
+                        color: $third-color;
+                    }
                 }
 
                 .main_title-block {
                     width: 95%;
                     margin: 15px auto 0;
+                    border-radius: 0;
+
                 }
             }
 
@@ -121,6 +169,26 @@
 
             a {
                 font-size: 3.5vw;
+            }
+
+            &:hover {
+                background: $secondary-color;
+            }
+        }
+    }
+
+    .nav-pages {
+        &_wrapper {
+            height: 60px;
+        }
+
+        &_button {
+            &:hover {
+                background-color: $secondary-color;
+            }
+
+            &:hover>span {
+                background-image: none;
             }
         }
     }
@@ -169,6 +237,25 @@
 }
 
 @media (max-width: 360px) {
+
+    .header {
+        &_button {
+            &:first-child {
+                width: 80vw;
+                height: 26vw;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+                span {
+                    font-size: 8vw;
+                }
+            }
+        }
+    }
+
     .main {
 
         &_wrapper {
@@ -181,6 +268,7 @@
 
         &_header {
             font-size: 8vw;
+
         }
 
         .mini-vidget-links {
@@ -204,11 +292,21 @@
                 height: auto;
 
                 h3 {
-                    font-size: 12vw;
+                    font-size: 11vw;
                 }
             }
 
+
+
+
+            &-img {
+                width: 80vw;
+                height: 80vw;
+            }
+
             &-info {
+                width: 80vw;
+
                 div {
 
                     span,
@@ -231,7 +329,7 @@
         margin: 15px auto 0;
 
         &_wrapper {
-            height: 80px;
+            height: 60px;
         }
 
         &_button {
