--- a/sass/_xmas-design.scss
+++ b/sass/_xmas-design.scss
@@ -21,7 +21,7 @@
 }
 
 .background-wrapper {
-    filter: blur(6px); //Опционально
+    filter: blur(3px); //Опционально
     position: fixed;
     top: 0;
     left: 0;
@@ -32,7 +32,7 @@
 
     // background: linear-gradient(90deg, rgba(120, 151, 173, 0.25) 0.1%, rgba(0, 0, 0, 0.55) 60%, rgba(120, 100, 148, 0.2) 100%), url(../img/bg-sakura.jpg) center center / cover no-repeat;
 
-    background: linear-gradient(90deg, rgba(120, 151, 173, 0.8) 0%, rgba(0, 0, 0, 0.35) 50%, rgba(120, 151, 173, 0.8) 100%), url(../img/sakura-theme/bg-sakura.jpg) center center / cover no-repeat;
+    background: linear-gradient(90deg, rgba(120, 151, 173, 0.45) 0%, rgba(0, 0, 0, 0.38) 50%, rgba(120, 151, 173, 0.45) 100%), url(../img/xmas-theme/bg-newyork.jpg) center center / cover no-repeat;
     opacity: 0.98;
 
 
@@ -43,8 +43,23 @@
     position: fixed;
     min-height: 100vh;
     z-index: 1;
-    background: url(../img/sakura-theme/sakura.gif);
+    background: url(../img/xmas-theme/snow.gif);
+    background-size: 35% 110%;
+    animation-name: snowfall;
+    animation-duration: 15s;
+    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+    animation-iteration-count: infinite;
     opacity: 0.2;
+}
+
+.background-border {
+    width: 100%;
+    height: 30%;
+    position: absolute;
+    top: 0px;
+    z-index: 1;
+    background: url(../img/xmas-theme/Christmas-frame.png) center center / cover no-repeat;
+    opacity: 0.65;
 }
 
 .language-buttons {
@@ -99,7 +114,7 @@
             align-items: center;
             width: 100%;
             height: 100%;
-            background: url(../img/sakura-theme/sakura.gif) center center / cover no-repeat;
+            background: url(../img/xmas-theme/snow.gif) center center / cover no-repeat;
         }
     }
 }
