--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -105,7 +105,7 @@
                 border-bottom-right-radius: 30px;
                 // flex-direction: column;
                 transform: skewX(-16deg);
-                background: $secondary-color url(../img/header/sakura.gif) center center / cover no-repeat;
+                background: $secondary-color url(../img/xmas-theme/snow.gif) center center / cover no-repeat;
 
                 img,
                 span {
@@ -189,7 +189,7 @@
 
         .soundcloud-block,
         .vkgroup-block {
-            height: 8vw;
+            height: 9vw;
 
             a {
                 font-size: 3.5vw;
