--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -33,6 +33,79 @@
         border-top-right-radius: $border-radius;
     }
 
+    &_info-block {
+        display: flex;
+        flex-direction: column;
+        margin-top: 15px;
+        row-gap: 15px;
+    }
+
+    &_info-header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 80px;
+        background-color: $secondary-color;
+        border: $primary-color 6px solid;
+
+        h3 {
+            font-weight: 700;
+            font-size: 40px;
+            letter-spacing: 0.03em;
+            text-align: center;
+            color: $primary-color;
+            margin-bottom: 0;
+        }
+    }
+
+    &_info-body {
+        width: 100%;
+        background-color: $primary-color;
+        min-height: 290px;
+        padding: 25px 50px;
+
+        img {
+            width: 100%;
+            max-height: 250px;
+            object-fit: scale-down;
+        }
+
+        h3 {
+            display: block;
+            width: 100%;
+            min-height: 30px;
+            background-color: $secondary-color;
+            text-align: center;
+            line-height: 36px;
+            font-size: 26px;
+            margin-top: 30px;
+            color: $primary-color;
+        }
+
+        p {
+            margin: 20px 0 0;
+            text-align: justify;
+            font-size: 24px;
+        }
+
+        span {
+            display: flex;
+            margin-top: 20px;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            text-align: center;
+            min-height: 26px;
+            background-color: $secondary-color;
+            color: $primary-color;
+            font-family: 'Sangha';
+            padding: 4px 10px;
+            font-size: 24px;
+        }
+
+    }
+
     .title_radius {
         border-top-right-radius: 0;
         border-top-left-radius: $border-radius;
@@ -197,6 +270,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            #vk_groups {
+                display: flex;
+                flex-shrink: 1;
+                align-items: center;
+            }
         }
     }
 }
