--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -102,6 +102,7 @@
             font-family: 'Sangha';
             padding: 4px 10px;
             font-size: 24px;
+            border: 4px solid $third-color;
         }
 
     }
