--- a/sass/_xmas-design.scss
+++ b/sass/_xmas-design.scss
@@ -126,3 +126,8 @@
         }
     }
 }
+
+.soundcloud-block:hover,
+.vkgroup-block:hover {
+    background: $third-color url(../img/xmas-theme/snow.gif) center center / 100% no-repeat !important;
+}
